--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "keywords": [],
   "author": "",
+  "engines": {
+    "node": "12.16.1"
+  },
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
